# Deep-Learning-with-Python

./: .gitignore  pyproject.toml
Chapter 3/: 3.4 - IMDB example.ipynb  3.5 - Reuters example.ipynb  3.6 - Boston Housing Price example.ipynb  Overview.md
Chapter 4/: Cross Validation.ipynb  Improving IMDB example.ipynb  Overview.md
Chapter 5/: 5.1 Introduction to convnets.ipynb  5.2 Training a convnet from scratch.ipynb  5.3 Using a pretrained convnet.ipynb  Overview.md
