[tool.poetry]
name = "deep-learning-with-python"
version = "0.1.0"
description = ""
authors = ["Gary Loayza <loayzag91@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
jupyter = "^1.0.0"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
tensorflow-gpu = "^2.5.0"
numpy = "~1.19"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
